Mon Mar 09 06:44:48 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.h: define struct SVAR for SVAR.
	  This data type is also same layout of NODE (NODE_IF).

	* vm_insnhelper.c: catch up this change.

Mon Mar  9 06:43:21 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (lep_svar_set): add WBs.

Mon Mar  9 06:19:06 2015  Koichi Sasada  <ko1@atdot.net>

	* internal.h: define rb_cref_t and change to use it.

	  rb_cref_t is data type of CREF. Now, the body is still NODE.
	  It is easy to understand what is CREF and what is pure NODE.

Mon Mar  9 06:00:37 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.h (COPY_CREF_OMOD): fix translation miss.

Mon Mar  9 04:47:58 2015  Koichi Sasada  <ko1@atdot.net>

	* internal.h: define CREF accessor macros.
	  * CREF_CLASS(cref)
	  * CREF_NEXT(cref)
	  * CREF_VISI(cref)
	  * CREF_VISI_SET(cref, v)
	  * CREF_REFINEMENTS(cref)
	  * CREF_PUSHED_BY_EVAL(cref)
	  * CREF_PUSHED_BY_EVAL_SET(cref)
	  * CREF_OMOD_SHARED(cref)
	  * CREF_OMOD_SHARED_SET(cref)
	  * CREF_OMOD_SHARED_UNSET(cref)

	  This is process to change CREF data type from NODE.

Sun Mar  8 22:50:57 2015  Tanaka Akira  <akr@fsij.org>

	* ext/zlib/zlib.c (rb_gzfile_close): Don't raise on double
	  close for consistent to IO#close.

Sun Mar  8 16:57:35 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_helper): match patterns against legacy short names
	  too, not only ordinary names.  [ruby-core:67954] [Bug #10819]

	* win32/dir.h (struct direct): add short name members.

	* win32/win32.c (opendir_internal, readdir_internal): ditto.

Sat Mar  7 09:36:05 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* array.c: document that first element is kept when using
	  Array#uniq and #uniq! [fix GH-845][ci skip]
	  Patch by @riffraff

Sat Mar  7 09:28:02 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* thread.c: Mutex#owned? is no longer experimental since 2.1.0
	  [fix GH-839][ci skip] Patch by @takiy33
