@@ -1,3 +1,8 @@
+Mon Mar  9 16:34:36 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/stringio/stringio.c (strio_close): don't raise on dobule
+	  close for consistent to IO#close.
+
 Mon Mar 09 06:44:48 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* vm_insnhelper.h: define struct SVAR for SVAR.
